# TitaniumFoil

./: .gitignore  Cargo.toml  PHYSICS.md  README.md  build.sh  release.sh  titaniumfoil-shape
crates/titaniumfoil/: Cargo.toml
crates/titaniumfoil-cli/: Cargo.toml
crates/titaniumfoil-cli/src/: bench.rs  llt.rs  main.rs  plot.rs  viz.rs
crates/titaniumfoil-core/: Cargo.toml
crates/titaniumfoil-core/src/: boundary_layer.rs  geometry.rs  lib.rs  linalg.rs  panel.rs  solver.rs  spline.rs  types.rs  viscous.rs
crates/titaniumfoil-ffi/: Cargo.toml
crates/titaniumfoil-ffi/src/: lib.rs
crates/titaniumfoil-metal/: Cargo.toml  build.rs
crates/titaniumfoil-metal/src/: blvar_gpu.rs  context.rs  lib.rs  panel_gpu.rs
crates/titaniumfoil-optimizer/: Cargo.toml
crates/titaniumfoil-optimizer/src/: main.rs
crates/titaniumfoil-py/: Cargo.toml  pyproject.toml
crates/titaniumfoil-py/src/: lib.rs
crates/titaniumfoil/src/: lib.rs
include/: titaniumfoil.hpp
shaders/: blsys_solve.metal  blvar_compute.metal  panel_influence.metal
visualizer/: shape.html
