[package]
name    = "titaniumfoil-py"
version = "0.1.0"
edition = "2021"

[lib]
name       = "titaniumfoil"
crate-type = ["cdylib"]

[dependencies]
tf = { package = "titaniumfoil", path = "../titaniumfoil" }
# abi3-py38: builds a stable ABI wheel compatible with Python 3.8+ (including 3.14+)
# This avoids version-specific wheel names and PyO3's max-version check.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }

