[build-system]
requires      = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name            = "titaniumfoil"
version         = "0.1.0"
description     = "GPU-accelerated NACA airfoil analysis for Apple Silicon"
requires-python = ">=3.8"
license         = { text = "GPL-2.0" }
keywords        = ["aerodynamics", "naca", "airfoil", "cfd", "metal", "gpu"]

[tool.maturin]
features    = ["pyo3/extension-module", "pyo3/abi3-py38"]
module-name = "titaniumfoil"
# abi3 wheel works with Python 3.8+ (including 3.14+)
# Wheel name: titaniumfoil-X.Y.Z-cp38-abi3-macosx_11_0_arm64.whl
